2009-03-09  Bin Li <bin.li@ricoh-tech.com>
	
	* PPD/, printer/: Added 28 Postscript and 12 pxlmono PPD files for 28 Ricoh Family Group models.

2009-01-22  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/foo2hiperc.xml, driver/foo2hp.xml, driver/foo2lava.xml,
	  driver/foo2oak-z1.xml, driver/foo2oak.xml, driver/foo2qpdl.xml,
	  driver/foo2slx.xml, driver/foo2xqx.xml,
	  printer/Generic-OAKT_Printer.xml,
	  printer/HP-Color_LaserJet_1500.xml,
	  printer/HP-Color_LaserJet_CP1215.xml,
	  printer/HP-LaserJet_M1120_MFP.xml,
	  printer/HP-LaserJet_P1005.xml, printer/HP-LaserJet_P1006.xml,
	  printer/HP-LaserJet_P1007.xml, printer/HP-LaserJet_P1008.xml,
	  printer/HP-LaserJet_P1505.xml, printer/HP-LaserJet_P2014.xml,
	  printer/Kyocera-KM-1635.xml, printer/Kyocera-KM-2035.xml,
	  printer/Lexmark-C500.xml, printer/Oki-C3100.xml,
	  printer/Oki-C3200.xml, printer/Oki-C3300.xml,
	  printer/Oki-C3400.xml, printer/Oki-C3530_MFP.xml,
	  printer/Oki-C5100.xml, printer/Oki-C5200.xml,
	  printer/Oki-C5500.xml, printer/Oki-C5600.xml,
	  printer/Oki-C5800.xml, printer/Samsung-CLP-300.xml,
	  printer/Samsung-CLP-315.xml, printer/Samsung-CLP-600.xml,
	  printer/Samsung-CLP-610.xml, printer/Samsung-CLX-2160.xml,
	  printer/Samsung-CLX-3175.xml: Updated data about Rick
	  Richardson's "foo2..." driver series.

2009-01-16  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-E120.xml, driver/pxlmono.xml: Corrected driver
	  list (bug #298).

2009-01-14  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/HP-CM8060_Color_MFP.xml: Fixed Foomatic ID (Bug #294).

	* printer/Canon-LBP-3360.xml: Fixed "gutenprint" entry in the driver
	  lis (Bug #295).

	* printer/Canon-imageRunner_5000.xml,
	  printer/Canon-imageRunner_6000.xml: Fixed "lj4dith" entry in
	  driver list (Bug #293).

2009-01-13  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/mj500c.xml, driver/mj6000c.xml, driver/mj700v2c.xml,
	  driver/mj8000c.xml: Added warning that the MachJet drivers in