@@ -1,0 +1,41 @@
+<printer id="printer/Genicom-microLaser_210">
+   <make>Genicom</make>
+   <model>microLaser 210</model>
+   <mechanism>
+   <color/>
+      <laser/>
+      <resolution>
+         <dpi>
+            <!--x unknown-->
+            <!--y unknown-->
+         </dpi>
+      <consumables>
+      </consumables>
+      </resolution>
+   </mechanism>
+   <url></url>
+   <lang>
+      <postscript level="3" />
+      <pcl level="5e"/>
+      <pjl/>
+      <!--no "text"-->
+   </lang>
+   <functionality>A</functionality>
+   <driver>Postscript-Genicom</driver>
+   <drivers>
+     <driver>
+       <id>Postscript-Genicom</id>
+       <ppd>PPD/Genicom/GNML2101.PPD</ppd>
+     </driver>
+     <driver>
+       <id>Postscript</id>
+     </driver>
+   </drivers>
+   <comments>
+      <en>
+      Throughput = 21
+      
+      Foomatic entry made by PPDtoXML T/G 0.20 on 2009-03-17
+      </en>
+   </comments>
+</printer>
