@@ -1,3 +1,8 @@
+2009-03-17  Dafydd Crosby <dcrosby@userful.com>
+
+	* printer/Genicom-microLaser_210.xml: LP # 343444 - added XML profile,
+	  PPD located in foomatic-db-nonfree
+	
 2009-03-09  Bin Li <bin.li@ricoh-tech.com>
 	
 	* PPD/, printer/: Added 28 Postscript and 12 pxlmono PPD files for 28 Ricoh Family Group models.
